Support for measurements/profiling
Measurements
  runs multiple enum definitions to compare performance
Profiling ('bench profile')
  runs enumeration in a loop with allowing connection for profiling
 (check Build.scala for details)